--- a/manifest.json
+++ b/manifest.json
@@ -12,8 +12,8 @@
         ],
         "persistent": false
     },
-    "browser_action": {
-        "default_title": "Inject livereload.js"
+    "page_action": {
+        "default_title": "Inject livereload.js",
     },
     "manifest_version": 2
 }
