--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,13 +1,21 @@
 {
-    "env": {
-        "browser": true
-    },
-    "extends": "eslint:recommended",
-    "rules": {
-        "no-console":0,
-        "semi": [
-            "error",
-            "always"
-        ]
-    }
+  "env": {
+    "browser": true
+  },
+  "extends": "eslint:recommended",
+  "rules": {
+    "quotes": [
+      "error",
+      "double"
+    ],
+    "no-console": "off",
+    "strict": [
+      "error",
+      "global"
+    ],
+    "semi": [
+      "error",
+      "always"
+    ]
+  }
 }
