--- a/manifest.json
+++ b/manifest.json
@@ -16,5 +16,6 @@
     "default_title": "Inject livereload.js",
     "default_icon": "images/inactive.png"
   },
+  "options_page": "options.html",
   "manifest_version": 2
 }
