eslint: allowing string template literals

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,7 +6,9 @@
   "rules": {
     "quotes": [
       "error",
-      "double"
+      "double", {
+        "allowTemplateLiterals": true
+      }
     ],
     "no-console": "off",
     "strict": [
