--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
     "scripts": [
       "background.js"
     ],
-    "persistent": false
+    "persistent": true
   },
   "page_action": {
     "default_title": "Inject livereload.js",
